--- a/kb.html
+++ b/kb.html
@@ -8,14 +8,21 @@
   <meta name="MC Ricky G" content="KB">
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 <style type="text/css">
-  html {
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-}
-table{
-    width:100%;
-	height:100%;
-}
+	* {padding:0; margin:0;}
+  	html {
+    	-webkit-user-select: none;
+    	-webkit-touch-callout: none;
+		width: 100%;
+		height: 100%;
+	}
+	body {
+		width: 100%;
+		height: 100%;
+	}
+	table {
+    	width:100%;
+		height:100%;
+	}
 </style>
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -61,8 +68,8 @@ table{
 					<input type="checkbox" id="inKeyCheckbox" onclick="changeInKey()">
 				</div>
 			</td>
-            <td width="80%" ><div id='padsCell'>
-				<canvas id="myCanvas" width="1200" height="720" onmousedown="handleMouseDown(event.clientX,event.clientY)" style="border:1px solid #d3d3d3;">
+            <td width="80%" ><div id='padsCell' style="height:100%">
+				<canvas id="myCanvas" onmousedown="handleMouseDown(event.clientX,event.clientY)" style="border:1px solid #d3d3d3;">
 					Your browser does not support the HTML5 canvas tag.
 				</canvas>
 				</div>
